--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,8 @@ parameters:
 
 framework:
     #esi: ~
-    translator: { fallbacks: ['%locale%'] }
+    default_locale: fr
+    translator: { fallbacks: ['fr'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
