--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -5,8 +5,8 @@ parameters:
     database_name: esprit_entraide
     database_user: root
     database_password: root
-    mailer_transport: smtp
+    mailer_transport: gmail
     mailer_host: 127.0.0.1
     mailer_user: houssem.nouira@esprit.tn
-    mailer_password: null
+    mailer_password: ?(sgnFG1"3]<o&g
     secret: f364466347ede9c84a00be826673470ed6bb6e52
