--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,6 +74,14 @@ fos_user:
     registration:
       confirmation:
         enabled: true
+        from_email:
+            address:        "%mailer_user%"
+            sender_name:    EspritEntraide - Confirmation de compte
+    resetting:
+      email:
+        from_email:
+          address:        "%mailer_user%"
+          sender_name:    EspritEntraide - Password Reset
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
     user_class: AppBundle\Entity\User
