--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,7 +22,6 @@ framework:
     #serializer: { enable_annotations: true }
     templating:
         engines: ['twig']
-    default_locale: '%locale%'
     trusted_hosts: ~
     session:
         # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
@@ -73,7 +72,7 @@ swiftmailer:
 fos_user:
     registration:
       confirmation:
-        enabled: true
+        enabled: false
         from_email:
             address:        "%mailer_user%"
             sender_name:    EspritEntraide - Confirmation de compte
