--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -26,3 +26,7 @@ user_profile:
 show_hide_phone:
     path:   /shpn
     defaults:   {   _controller:    "AppBundle:Default:PhoneNumber" }
+
+change_user_photo:
+    path:   /cppic
+    defaults:   {   _controller:    "AppBundle:Default:changeUserPhoto" }
